kartenkrieger-webseite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app-deployment
  namespace: webservices
  labels:
    app: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app-container
          image: ghcr.io/kiriolerny/kartenkrieger-webseite:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
  namespace: webservices
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
